--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.+'
     compile 'com.android.support:support-v4:21.+'
     compile 'com.mcxiaoke.volley:library:1.0.15'
+    compile 'com.google.code.gson:gson:2.3.1'
 }
