--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.+'
     compile 'com.android.support:support-v4:21.+'
-    compile 'com.mcxiaoke.volley:library:1.0.15'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.android.support:design:22.2.0'
+
 }
