--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,20 @@
 apply plugin: 'com.android.application'
 
+def gitSha = 'git rev-parse --short HEAD'.execute([], project.rootDir).text.trim()
+def buildTime = new Date().format("yyyy-MM-dd'T'HH:mm'Z'", TimeZone.getTimeZone("UTC"))
+
+def isTravis = "true".equals(System.getenv("TRAVIS"))
+def preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
+
+
 android {
     compileSdkVersion 21
     buildToolsVersion "22.0.1"
+
+    dexOptions {
+        // Skip pre-dexing when running on Travis CI or when disabled via -Dpre-dex=false.
+        preDexLibraries = preDexEnabled && !isTravis
+    }
 
     defaultConfig {
         applicationId "org.fossasia.openevent"
@@ -10,6 +22,9 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "0.1"
+
+        buildConfigField "String", "GIT_SHA", "\"${gitSha}\""
+        buildConfigField "String", "BUILD_TIME", "\"${buildTime}\""
     }
     buildTypes {
         release {
