--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:label="@string/app_name"
         android:theme="@style/Base.AppTheme">
         <activity
+            android:name=".activities.SplashActivity"
+            android:label="Splash"></activity>
+
+        <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
