--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,17 @@
         android:theme="@style/Base.AppTheme">
         <activity
             android:name=".activities.SplashActivity"
-            android:label="Splash"/>
-
-        <activity
-            android:name=".activities.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".activities.MainActivity"
+            android:label="@string/app_name">
         </activity>
         <activity
             android:name=".activities.SettingsActivity"
