--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="org.fossasia.openevent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="org.fossasia.openevent">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".OpenEventApp"
@@ -15,37 +15,41 @@
             android:name=".activities.SplashActivity"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".activities.SettingsActivity"
-            android:label="@string/action_settings"/>
+            android:label="@string/action_settings" />
         <activity
             android:name=".activities.TracksActivity"
-            android:label="@string/title_section_tracks"/>
+            android:label="@string/title_section_tracks" />
         <activity
             android:name=".activities.LocationActivtiy"
-            android:label="@string/title_section_location"/>
+            android:label="@string/title_section_location" />
         <activity
             android:name=".activities.SpeakersActivity"
-            android:label="@string/title_section_speakerlist"/>
+            android:label="@string/title_section_speakerlist" />
 
         <activity
             android:name=".activities.SessionDetailActivity"
             android:label="@string/session">
             <meta-data
                 android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
-
+                android:resource="@xml/searchable" />
         </activity>
+
+        <service
+            android:name=".Services.BookmarkAlarmService"
+            android:enabled="true" />
+
+        <receiver android:name=".Receivers.NotificationReceiver" />
     </application>
 
 </manifest>
