--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.fossasia.openevent">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -23,7 +22,7 @@
 
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name"/>
         <activity
             android:name=".activities.SettingsActivity"
             android:label="@string/action_settings" />
@@ -49,7 +48,7 @@
             android:name=".Services.BookmarkAlarmService"
             android:enabled="true" />
 
-        <receiver android:name=".Receivers.NotificationReceiver" />
+        <receiver android:name=".Receivers.NotificationAlarmReceiver" />
     </application>
 
 </manifest>
