--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script: ./gradlew :app:connectedAndroidTest :app:coveralls
+script: ./gradlew :app:connectedAndroidTest coveralls
 
 # Gitter Integration via Webhook (https://gitter.im/fossasia/open-event-android)
 notifications:
