--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     compile "com.android.support:design:${SUPPORT_LIB_VERSION}"
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup:otto:1.3.8'
+    compile 'com.jakewharton.timber:timber:4.1.0'
 
     googleplayCompile 'com.google.android.gms:play-services-maps:8.3.0'
 
