--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,8 @@ dependencies {
     androidTestCompile 'com.android.support.test:rules:0.3'
     androidTestCompile "org.mockito:mockito-core:1.+"
 
+    // Catch all the leaks
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1' // or 1.4-beta1
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1' // or 1.4-beta1
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1' // or 1.4-beta1
 }
