--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-alpha9'
+        classpath 'com.android.tools.build:gradle:2.0.0-beta2'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.6.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
