--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             android:name=".activities.SplashActivity"
             android:label="@string/app_name"
             android:launchMode="singleInstance"
+            android:supportsRtl="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
