fix the testing setup
Signed-off-by: Arnav Gupta <championswimmer@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ android:
 #   - android-wait-for-emulator
 #   - adb shell input keyevent 82 &
 script:
-  - ./gradlew build jacocoTestReport assembleAndroidTest
+  - ./gradlew build test
   - chmod a+x codestyle.sh
   - "./codestyle.sh"
 notifications:
