--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ android:
 #   - android-wait-for-emulator
 #   - adb shell input keyevent 82 &
 script:
-  - ./gradlew build jacocoTestReport assembleAndroidTest
+  - ./gradlew build
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
