fix the testing setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ android:
   - extra-android-m2repository
   - sys-img-armeabi-v7a-$ANDROID_TARGET
 script:
-  - ./gradlew build jacocoTestReport assembleAndroidTest
+  - ./gradlew build
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
