--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,11 +6,11 @@ def buildTime = new Date().format("yyyy-MM-dd'T'HH:mm'Z'", TimeZone.getTimeZone(
 
 def isTravis = "true".equals(System.getenv("TRAVIS"))
 def preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
-def SUPPORT_LIB_VERSION = "23.1.1"
+def SUPPORT_LIB_VERSION = "24.0.0"
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
 
     dexOptions {
         // Skip pre-dexing when running on Travis CI or when disabled via -Dpre-dex=false.
@@ -24,7 +24,7 @@ android {
     defaultConfig {
         applicationId "org.fossasia.openevent"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 80
         versionName "0.8.1"
 
@@ -56,6 +56,16 @@ android {
         abortOnError false
         disable 'InvalidPackage'
     }
+
+    // https://stackoverflow.com/questions/36833606/android-support-library-error-after-updating-to-23-3-0
+    configurations.all {
+        resolutionStrategy {
+            force  "com.android.support:appcompat-v7:${SUPPORT_LIB_VERSION}"
+            force  "com.android.support:support-v4:${SUPPORT_LIB_VERSION}"
+            force  "com.android.support:recyclerview-v7:${SUPPORT_LIB_VERSION}"
+            force  "com.android.support:design:${SUPPORT_LIB_VERSION}"
+        }
+    }
 }
 
 
@@ -66,17 +76,17 @@ dependencies {
     compile "com.android.support:support-v4:${SUPPORT_LIB_VERSION}"
     compile "com.android.support:cardview-v7:${SUPPORT_LIB_VERSION}"
     compile "com.android.support:recyclerview-v7:${SUPPORT_LIB_VERSION}"
+    compile "com.android.support:design:${SUPPORT_LIB_VERSION}"
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
-    compile "com.android.support:design:${SUPPORT_LIB_VERSION}"
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.jakewharton.timber:timber:4.1.0'
     compile 'com.jakewharton:butterknife:7.0.1'
 
     // Googleplay Variant
-    googleplayCompile 'com.google.android.gms:play-services-maps:8.4.0'
+    googleplayCompile 'com.google.android.gms:play-services-maps:9.2.0'
 
     // Fdroid Variant
     fdroidCompile 'org.osmdroid:osmdroid-android:5.1'
@@ -88,19 +98,11 @@ dependencies {
     testCompile "org.robolectric:robolectric:3.0"
 
     //Instrumentation Test
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
-    androidTestCompile('com.android.support.test:runner:0.4') {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
     androidTestCompile "com.android.support:support-annotations:${SUPPORT_LIB_VERSION}"
-    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2') {
-        exclude group: 'com.android.support', module: 'appcompat'
-        exclude group: 'com.android.support', module: 'support-v4'
-        exclude module: 'recyclerview-v7'
-    }
-    androidTestCompile('com.android.support.test:rules:0.4') {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile "org.mockito:mockito-core:1.10.19"
 
     // Catch all the leaks
