APK size reduced. (#960)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,9 +36,13 @@ android {
     buildTypes {
         debug {
             testCoverageEnabled true
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
