Revert "APK size reduced." (#986)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,13 +36,9 @@ android {
     buildTypes {
         debug {
             testCoverageEnabled true
-            minifyEnabled true
-            shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         release {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
