--- a/kubernetes/yamls/generator/android-service.yml
+++ b/kubernetes/yamls/generator/android-service.yml
@@ -9,5 +9,5 @@ spec:
     targetPort: 8080
   selector:
     app: android-generator
-#  type: LoadBalancer
-#  loadBalancerIP: '104.196.233.213'
+  type: LoadBalancer
+  loadBalancerIP: '104.198.14.175'
