Updated PPA for JDK8 installation

--- a/kubernetes/images/generator/Dockerfile
+++ b/kubernetes/images/generator/Dockerfile
@@ -13,13 +13,15 @@ ENV ANDROID_BUILD_TOOLS_VERSION ${ANDROID_BUILD_TOOLS_VERSION:-24.0.2}
 ENV ANDROID_API_LEVEL ${ANDROID_API_LEVEL:-24}
 ENV ANDROID_TAG google_apis
 
+RUN echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" | tee /etc/apt/sources.list.d/webupd8team-java.list
+RUN echo "deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" | tee -a /etc/apt/sources.list.d/webupd8team-java.list
+RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886
+
 # Install java8
 RUN apt-get update && \
   apt-get install -y software-properties-common && \
-  add-apt-repository -y ppa:webupd8team/java && \
   (echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections) && \
-  apt-get update && \
-  apt-get install -y oracle-java8-installer && \
+  apt-get install -y oracle-java8-installer oracle-java8-set-default && \
   apt-get clean && \
   rm -fr /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
