Fixed deployment errors

--- a/kubernetes/images/generator/Dockerfile
+++ b/kubernetes/images/generator/Dockerfile
@@ -9,9 +9,6 @@ ARG ANDROID_API_LEVEL
 
 ENV BRANCH ${BRANCH:-master}
 ENV REPOSITORY ${REPOSITORY:-https://github.com/fossasia/open-event-android.git}
-ENV ANDROID_BUILD_TOOLS_VERSION ${ANDROID_BUILD_TOOLS_VERSION:-24.0.2}
-ENV ANDROID_API_LEVEL ${ANDROID_API_LEVEL:-24}
-ENV ANDROID_TAG google_apis
 
 RUN echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" | tee /etc/apt/sources.list.d/webupd8team-java.list
 RUN echo "deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" | tee -a /etc/apt/sources.list.d/webupd8team-java.list
@@ -26,37 +23,31 @@ RUN apt-get update && \
   rm -fr /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Install Deps
-RUN dpkg --add-architecture i386 && apt-get update && apt-get install -y --force-yes expect git wget libc6-i386 lib32stdc++6 lib32gcc1 lib32ncurses5 lib32z1 python curl libqt5widgets5 && apt-get clean && rm -fr /var/lib/apt/lists/* /tmp/* /var/tmp/*
+RUN dpkg --add-architecture i386 && apt-get update && apt-get install -y --force-yes expect git wget libc6-i386 lib32stdc++6 lib32gcc1 lib32ncurses5 lib32z1 python curl libqt5widgets5
 
 # update some packages
 RUN apt-get install -y wget git ca-certificates curl && update-ca-certificates
-# install deps
-RUN apt-get install -y --no-install-recommends build-essential python-dev libpq-dev libevent-dev libmagic-dev
+
+RUN apt-get install -y --no-install-recommends build-essential python-dev libpq-dev libevent-dev libmagic-dev expect zip unzip
+
+RUN apt-get clean && rm -fr /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Copy install tools
 COPY tools /opt/tools
 ENV PATH ${PATH}:/opt/tools
 
-# Install Android SDK
-RUN cd /opt && wget --output-document=android-sdk.zip \
-    https://dl.google.com/android/repository/tools_r25.2.3-linux.zip \
-    && unzip android-sdk.zip -d /opt/android-sdk-linux && rm -f android-sdk.zip \
-    && mkdir /opt/android-sdk-linux/platform-tools \
-    && chown -R root.root android-sdk-linux && \
-    /opt/tools/android-accept-licenses.sh "android-sdk-linux/tools/android update sdk --all --no-ui --filter platform-tools,tools" && \
-    /opt/tools/android-accept-licenses.sh 'android-sdk-linux/tools/android update sdk --all --no-ui --filter platform-tools,tools,build-tools-${ANDROID_BUILD_TOOLS_VERSION},android-${ANDROID_API_LEVEL},addon-${ANDROID_TAG}-google-${ANDROID_API_LEVEL},extra-android-support,extra-android-m2repository,extra-google-m2repository,extra-google-google_play_services'
-
 # Setup environment
 ENV ANDROID_HOME /opt/android-sdk-linux
-ENV PATH ${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
-
 ENV WORKSPACE /data/workspace
-
 RUN mkdir -p $WORKSPACE
-
 WORKDIR $WORKSPACE
 
+COPY android.sh .
 COPY setup.sh .
+
+RUN bash android.sh
+
+ENV PATH ${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
 
 RUN bash setup.sh
 
