Makes the share and back icons in the single speaker view easier to see (#995)
* Makes the share and back icons in the single speaker view much easier to see

* Fix Codacy "Document empty method body" issue

* Added drawables

* Update SpeakerDetailsActivity.java

* Fixed onPause not closing

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     compile "com.android.support:recyclerview-v7:${SUPPORT_LIB_VERSION}"
     compile "com.android.support:design:${SUPPORT_LIB_VERSION}"
     compile "com.android.support:customtabs:${SUPPORT_LIB_VERSION}"
+    compile "com.android.support:palette-v7:${SUPPORT_LIB_VERSION}"
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
