--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     compile 'com.squareup:otto:1.3.8'
     compile 'com.jakewharton.timber:timber:4.1.0'
     compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
     // Googleplay Variant
