- Renamed TracksActivity to TrackSessionsActivity - Improved the user interface of TrackSessionsActivity

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.TracksActivity"
+            android:name=".activities.TrackSessionsActivity"
             android:label="@string/title_section_tracks"
             android:theme="@style/AppTheme.NoActionBar.Alternate"/>
         <activity
