--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,12 +19,13 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/SplashTheme">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:theme="@style/SplashTheme"
+            android:configChanges="orientation|screenSize|keyboardHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".activities.BaseActivity"
@@ -33,7 +34,8 @@
         <activity
             android:name=".activities.SettingsActivity"
             android:label="@string/action_settings"
-            android:theme="@style/AppTheme.NoActionBar.Alternate">
+            android:theme="@style/AppTheme.NoActionBar.Alternate"
+            android:configChanges="orientation|screenSize|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.NOTIFICATION_PREFERENCES" />
@@ -42,20 +44,24 @@
         <activity
             android:name=".activities.TrackSessionsActivity"
             android:label="@string/title_section_tracks"
-            android:theme="@style/AppTheme.NoActionBar.Alternate"/>
+            android:theme="@style/AppTheme.NoActionBar.Alternate"
+            android:configChanges="orientation|screenSize|keyboardHidden"/>
         <activity
             android:name=".activities.LocationActivity"
             android:label="@string/title_section_location"
-            android:theme="@style/AppTheme.NoActionBar.Alternate" />
+            android:theme="@style/AppTheme.NoActionBar.Alternate"
+            android:configChanges="orientation|screenSize|keyboardHidden"/>
         <activity
             android:name=".activities.SpeakerDetailsActivity"
             android:label="@string/title_section_speakerlist"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="orientation|screenSize|keyboardHidden"/>
 
         <activity
             android:name=".activities.SessionDetailActivity"
             android:label="@string/session"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="orientation|screenSize|keyboardHidden">
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
