--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <meta-data android:name="io.branch.sdk.BranchKey" android:value="@string/branch_key_debug" />
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
+        <meta-data android:name="io.branch.sdk.BranchKey" android:value="@string/branch_key_live" />
 
         <activity
             android:name=".activities.MainActivity"
