--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -92,6 +92,8 @@ dependencies {
     compile 'com.jakewharton.timber:timber:4.1.0'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.7'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
     // Googleplay Variant
