--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,7 +7,7 @@ def buildTime = new Date().format("yyyy-MM-dd'T'HH:mm'Z'", TimeZone.getTimeZone(
 
 def isTravis = "true".equals(System.getenv("TRAVIS"))
 def preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
-def SUPPORT_LIB_VERSION = "25.1.0"
+def SUPPORT_LIB_VERSION = "25.1.1"
 
 android {
     compileSdkVersion 25
@@ -97,7 +97,7 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
     // Googleplay Variant
-    googleplayCompile 'com.google.android.gms:play-services-maps:9.2.0'
+    googleplayCompile 'com.google.android.gms:play-services-maps:9.8.0'
 
     // Fdroid Variant
     fdroidCompile 'org.osmdroid:osmdroid-android:5.1'
@@ -122,11 +122,11 @@ dependencies {
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1' // or 1.4-beta1
 
     //Branch integration for deep linking
-    compile ('io.branch.sdk.android:library:2.+') {
+    compile ('io.branch.sdk.android:library:2.5.9') {
         exclude module: 'answers-shim'
     }
 
     //Facebook SDK
-    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'com.facebook.android:facebook-android-sdk:4.20.0'
 
 }
