--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,12 +39,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.BaseActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".activities.SettingsActivity"
             android:label="@string/action_settings"
+            android:exported="false"
             android:theme="@style/AppTheme.NoActionBar.Alternate"
             android:configChanges="orientation|screenSize|keyboardHidden">
             <intent-filter>
