--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -120,9 +120,9 @@ dependencies {
     androidTestCompile "org.mockito:mockito-core:1.10.19"
 
     // Catch all the leaks
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1' // or 1.4-beta1
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1' // or 1.4-beta1
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1' // or 1.4-beta1
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
 
     //Branch integration for deep linking
     compile ('io.branch.sdk.android:library:2.5.9') {
