--- a/kubernetes/yamls/generator/android-deployment.yml
+++ b/kubernetes/yamls/generator/android-deployment.yml
@@ -2,6 +2,7 @@ kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
   name: android-generator
+  namespace: web
 spec:
   replicas: 1
   template:
