--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,6 +81,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    sourceSets.test.resources.srcDirs += ["src/main/assets"]
 }
 
 
