--- a/android/app/src/main/assets/config.json
+++ b/android/app/src/main/assets/config.json
@@ -1,5 +1,6 @@
 {
-  "Email": "dev@fossasia.org",
-  "App_Name": "Open Event",
-  "Api_Link": "https://open-event-api.herokuapp.com/v1/events/59/"
+  "email": "dev@fossasia.org",
+  "app-name": "Open Event",
+  "api-link": "https://open-event-api.herokuapp.com/v1/events/59/",
+  "is-auth-enabled": true
 }
